<resources>
    <string name="app_name">CategoryManager</string>
    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="save_button">Save</string>
    <string name="product_category">Category</string>
    <string name="add_category_button">Add</string>
    <string name="add_product_title">New Product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>